--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -47,9 +47,19 @@
   font-weight: 700;
   color: #000000;
   padding: 0 32px;
-  padding-top: 42px;
-  padding-bottom: 32px;
+  padding-top: 40px;
+  padding-bottom: 28px;
   text-align: center;
+}
+
+.intro__title--form {
+  padding-top: 37px;
+  padding-bottom: 25px;
+}
+
+.intro__title--photo {
+  padding-top: 37px;
+  padding-bottom: 26px;
 }
 
 .intro__text {
@@ -59,17 +69,23 @@
   font-weight: 400;
   color: #333333;
   padding: 0 32px;
-  padding-bottom: 44px;
+  padding-bottom: 24px;
   text-align: center;
 }
 
 .intro__text--padding-form {
+  padding: 0;
   padding-bottom: 18px;
+  width: 280px;
+  margin: 0 auto;
+  line-height: 24px;
 }
 
-.intro-text--padding-photo {
-  padding: 0 24px;
-  padding-bottom: 28px;
+.intro__text--photo {
+  width: 270px;
+  margin: 0 auto;
+  padding: 0;
+  line-height: 24px;
 }
 
 @media (min-width: 768px) {
@@ -77,7 +93,37 @@
     font-size: 21px;
     padding: 0 148px;
     padding-top: 50px;
-    padding-bottom: 50px;
+  }
+
+  .intro__text {
+    padding-top: 29px;
+  }
+  
+  .intro-form {
+    margin-bottom: 72px;
+  }
+  
+  .intro__title--form {
+    font-size: 30px;
+    padding: 0;
+    margin-top: 74px;
+    margin-bottom: 31px;
+  }
+
+  .intro__title--photo {
+    font-size: 30px;
+    padding-top: 76px;
+    padding-bottom: 2px;
+  }
+
+  .intro__text--padding-form {
+    padding: 0;
+    width: 440px;
+    margin: 0 auto;
+  }
+
+  .intro__text--photo {
+    width: 440px;
   }
 
   .intro__header {
@@ -123,14 +169,34 @@
     position: relative;
   }
 
+  .intro__header--photo,
+  .intro__header--form {
+    height: 302px;
+  }
+
   .intro__header::after {
     content: "";
     position: absolute;
-    bottom: 0;
+    bottom: -1px;
     width: 100%;
     height: 57px;
     background-image: url("../img/bg-intro-triangle-desktop.svg");
     background-repeat: no-repeat;
     background-position: 0 0;
+  }
+
+  .intro__title {
+  	padding: 0;
+  	padding-top: 110px;
+  	width: 550px;
+  	margin: 0 auto;
+  }
+
+  .intro__text--padding-form {
+    padding-top: 32px;
+  }
+
+  .intro-form {
+    margin-bottom: 55px;
   }
 }
