--- a/source/sass/blocks/photo.scss
+++ b/source/sass/blocks/photo.scss
@@ -3,15 +3,12 @@
   list-style: none;
   padding: 0 20px;
   margin: 0;
-}
-
-.photo__wrapper {
-  margin-top: 23px;
+  padding-top: 51px;
 }
 
 .photo__text {
-  margin-top: 17px;
-  margin-bottom: 20px;
+  padding-top: 10px;
+  padding-bottom: 39px;
 }
 
 .photo__title {
@@ -29,7 +26,6 @@
   font-weight: 400;
   color: #333333;
   text-transform: none;
-  margin-top: 8px;
 }
 
 .photo__sum {
@@ -38,9 +34,8 @@
   line-height: 24px;
   font-weight: bold;
   color: #000000;
-  margin-top: 12px;
-  margin-left: 12px;
-  padding-top: 2px;
+  padding-left: 12px;
+  padding-top: 8px;
 }
 
 .photo__likes {
@@ -59,7 +54,7 @@
 .photo__button::before {
   content: "";
   position: absolute;
-  top: 0;
+  top: 5px;
   left: 0;
   width: 24px;
   height: 24px;
@@ -68,15 +63,31 @@
   background-position: 50% 50%;
 }
 
+.photo__item {
+  position: relative;
+}
+
+.photo__item::before {
+  content: "";
+  position: absolute;
+  top: -23px;
+  left: -20px;
+  width: 320px;
+  height: 1px;
+  background-color: rgb(242, 242, 242);
+}
+
 @media (min-width: 768px) {
   .photo__wrapper {
     margin: 0;
   }
 
+
   .photo__text {
     margin: 0;
     background-color: #f2f2f2;
     display: flex;
+    padding-bottom: 17px;
   }
 
   .photo {
@@ -84,6 +95,7 @@
     padding: 0 60px;
     display: flex;
     flex-wrap: wrap;
+    padding-top: 69px;
   }
 
   .photo__item:nth-child(1) {
