--- a/source/sass/blocks/search-hotel.scss
+++ b/source/sass/blocks/search-hotel.scss
@@ -25,7 +25,7 @@
   font-weight: 400;
   color: #333333;
   text-align: center;
-  margin-top: 25px;
+  padding-top: 18px;
 }
 
 .search-hotel .search-hotel__button {
@@ -36,12 +36,12 @@
   background-color: #81b3d2;
   text-align: center;
   display: block;
-  padding-top: 18px;
-  padding-bottom: 19px;
+  padding-top: 16px;
+  padding-bottom: 16px;
   width: 280px;
   margin: 0 auto;
-  margin-top: 27px;
-  margin-bottom: 50px;
+  margin-top: 35px;
+  margin-bottom: 48px;
 }
 
 .search-hotel__button:hover,
@@ -65,9 +65,23 @@
 
   .search-hotel__title {
     font-size: 30px;
+    padding-top: 55px;
   }
 
   .search-hotel .search-hotel__button {
     width: 460px;
+    margin-top: 42px;
+    margin-bottom: 58px;
+  }
+
+  .search-hotel__description {
+    padding-top: 30px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .search-hotel .search-hotel__button {
+    margin-top: 48px;
+    margin-bottom: 65px;
   }
 }
