--- a/source/sass/blocks/video.scss
+++ b/source/sass/blocks/video.scss
@@ -1,6 +1,17 @@
 .video {
   background-color: #ffffff;
-  margin-bottom: 144px;
+  margin-bottom: 135px;
+  position: relative;
+}
+
+.video::before {
+  content: "";
+  position: absolute;
+  top: -22px;
+  left: 0;
+  width: 320px;
+  height: 1px;
+  background-color: rgb(242, 242, 242);
 }
 
 .video__wrapper-text {
@@ -14,7 +25,7 @@
   font-weight: 700;
   color: #000000;
   text-align: center;
-  margin-top: 36px;
+  padding-top: 10px;
 }
 
 .video__text {
@@ -24,19 +35,19 @@
   font-weight: 400;
   color: #333333;
   text-align: center;
-  margin-top: 30px;
+  padding-top: 27px;
   width: 252px;
 }
 
 .video__wrapper-video {
-  margin-top: 36px;
+  padding-top: 35px;
   position: relative;
 }
 
 .video__control-panel {
   padding: 0 20px;
   width: 100%;
-  height: 44px;
+  height: 42px;
   position: absolute;
   bottom: 8px;
 }
@@ -46,13 +57,13 @@
   padding-left: 22px;
   padding-right: 22px;
   padding-top: 22px;
-  height: 46px;
+  height: 44px;
   position: relative;
 }
 
 .video__toggle {
   position: absolute;
-  top: 18px;
+  top: 19px;
   left: 58px;
   border: none;
   width: 9px;
@@ -64,18 +75,18 @@
 
 .video__time-scale {
   width: 100%;
-  height: 2px;
+  height: 3px;
   background-color: rgba(255, 255, 255, 0.2);
 }
 
 .video__function-control {
   background-color: #f2f2f2;
-  height: 44px;
+  height: 66px;
 }
 
 .video__replay {
-  margin-left: 23px;
-  margin-top: 11px;
+  margin-left: 21px;
+  margin-top: 21px;
   width: 22px;
   height: 22px;
   border: none;
@@ -87,7 +98,8 @@
 }
 
 .video__titles {
-  margin-left: 132px;
+  margin-left: 126px;
+  margin-top: 22px;
   width: 32px;
   height: 22px;
   border: none;
@@ -99,7 +111,7 @@
 }
 
 .video__full-window {
-  margin-left: 30px;
+  margin-left: 27px;
   width: 20px;
   height: 20px;
   border: none;
@@ -111,13 +123,24 @@
 }
 
 @media (min-width: 768px) {
+  .video {
+    margin-bottom: 78px;
+  }
+
   .video__wrapper-video {
     width: 648px;
     padding: 0 60px;
   }
 
+  .video__title {
+    font-size: 30px;
+    padding-top: 65px;
+  }
+
   .video__text {
     width: 440px;
+    padding-top: 31px;
+    padding-bottom: 72px;
   }
 
   .video__control-panel {
@@ -167,5 +190,9 @@
   .video__wrapper-video {
     width: 800px;
     padding: 0 200px;
+  }
+
+  .video {
+    margin-bottom: 122px;
   }
 }
