--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -10,6 +10,10 @@
   width: 100%;
   height: 388px;
   position: relative;
+  @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+    background-image: url("../img/bg-back-mobile@2x.jpg");
+    background-size: 1536px auto;
+  }
 }
 
 .intro__header--form,
@@ -27,17 +31,21 @@
   top: 50%;
   left: 50%;
   transform: translateX(-50%) translateY(-50%);
+  width: 280px;
+  height: 215px;
 }
 
 .intro__header::after {
   content: "";
   position: absolute;
   bottom: 0;
-  width: 100%;
+  left: -6px;
+  width: calc(100% + 7px);
   height: 26px;
   background-image: url("../img/bg-intro-triangle-mobile.svg");
   background-repeat: no-repeat;
   background-position: 0 0;
+  background-size: cover;
 }
 
 .intro__title {
@@ -88,6 +96,11 @@
   line-height: 24px;
 }
 
+.intro__header picture {
+   width: 280px;
+   height: 209px;
+  }
+
 @media (min-width: 768px) {
   .intro__title {
     font-size: 21px;
@@ -132,8 +145,12 @@
     background-repeat: no-repeat;
     background-position: center;
     width: 100%;
-    height: 388px;
+    height: 518px;
     position: relative;
+    @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+      background-image: url("../img/bg-back-tablet@2x.jpg");
+      background-size: 768px auto;
+    }
   }
 
   .intro__header--photo,
@@ -145,6 +162,7 @@
     content: "";
     position: absolute;
     bottom: 0;
+    left: auto;
     width: 100%;
     height: 57px;
     background-image: url("../img/bg-intro-triangle-tablet.svg");
@@ -155,6 +173,11 @@
   .intro-text--padding-photo {
     width: 480px;
     margin: 0 auto;
+  }
+
+  .intro__logo {
+   width: 470px;
+   height: 354px;
   }
 }
 
@@ -167,11 +190,15 @@
     width: 100%;
     height: 518px;
     position: relative;
+    @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+      background-image: url("../img/bg-back-desktop@2x.jpg");
+      background-size: 2400px auto;
+    }
   }
 
   .intro__header--photo,
   .intro__header--form {
-    height: 302px;
+    height: 299px;
   }
 
   .intro__header::after {
