--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -21,6 +21,10 @@
   color: rgba(255, 255, 255, 0.3);
 }
 
+.button:disablet {
+  background-color: #e5e5e5;
+}
+
 .form__button {
   width: 280px;
   margin-top: 44px;
