--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -17,22 +17,37 @@
   margin: 0;
 }
 
-.form__group::before {
+
+.form__title {
+  position: relative;
+}
+
+.form__title::before {
   content: "";
   position: absolute;
   top: 0;
-  left: -20px;
+  left: -90px;
   width: 320px;
   height: 1px;
   background-color: rgba(0, 0, 0, 0.2);
 }
 
-.form__group:nth-child(2)::before {
+.form__group:nth-child(2) .form__title::before {
   top: 5px;
+  left: -41px;
 }
 
-.form__group:nth-child(3)::before {
+.form__group:nth-child(3) .form__title::before {
   top: 15px;
+  left: -43px;
+}
+
+.form__group:nth-child(4) .form__title::before {
+  left: -20px;
+}
+
+.form__group:nth-child(5) .form__title::before {
+  left: -52px;
 }
 
 .form__title {
@@ -122,14 +137,12 @@
 }
 
 .form__info:hover,
-.form__info:focus,
-.form__comment:hover,
-.form__comment:focus {
+.form__comment:hover, {
   background-color: #e5e5e5;
 }
 
-.form__info:active,
-.form__comment:active {
+.form__info:focus,
+.form__comment:focus {
   background-color: #ffffff;
   box-shadow: inset 0 0 0 4px #e5e5e5;
   outline: none;
@@ -453,7 +466,7 @@
     min-width: 100px;
   }
 
-  .form__group::before {
+  .form__group  .form__title::before {
     content: "";
     position: absolute;
     top: 0;
@@ -463,11 +476,11 @@
     background-color: rgba(0, 0, 0, 0.2);
   }
 
-  .form__group::before {
+  .form__group .form__title::before {
     display: none;
   }
 
-  .form__group:nth-child(1):before {
+  .form__group:nth-child(1) .form__title::before {
     content: "";
     position: absolute;
     top: 8px;
@@ -478,22 +491,26 @@
     display: block;
   }
 
-  .form__group:nth-child(2)::before {
+  .form__group:nth-child(2) .form__title::before {
     top: 46px;
+    left: 0;
     display: block;
   }
 
-  .form__group:nth-child(4)::before {
+  .form__group:nth-child(4) .form__title::before {
     top: 54px;
     display: block;
+    width: 38%;
+    left: -162px;
   }
 
-  .form__group:nth-child(5)::before {
+  .form__group:nth-child(5) .form__title::before {
     top: 55px;
     display: block;
+    left: 0;
   }
 
-  .form__group::after {
+  .form__title::after {
     content: "";
     position: absolute;
     top: 0;
@@ -503,21 +520,23 @@
     background-color: rgba(0, 0, 0, 0.2);
   }
 
-  .form__group::after {
+  .form__group .form__title::after {
     display: none;
   }
 
-  .form__group:nth-child(2)::after {
+  .form__group:nth-child(2) .form__title::after {
     top: 46px;
     display: block;
   }
 
-  .form__group:nth-child(4)::after {
+  .form__group:nth-child(4) .form__title::after {
     top: 54px;
     display: block;
+    width: 38%;
+    right: -162px;
   }
 
-  .form__group:nth-child(5)::after {
+  .form__group:nth-child(5) .form__title::after {
     top: 55px;
     display: block;
   }
@@ -625,16 +644,24 @@
     padding-bottom: 72px;
   }
 
-  .form__group:nth-child(2)::before,
-  .form__group:nth-child(4)::before,
-  .form__group:nth-child(5)::before {
+  .form__group:nth-child(2) .form__title::before,
+  .form__group:nth-child(4) .form__title::before,
+  .form__group:nth-child(5) .form__title::before {
     width: 280px;
   }
 
-  .form__group:nth-child(2)::after,
-  .form__group:nth-child(4)::after,
-  .form__group:nth-child(5)::after {
+  .form__group:nth-child(2) .form__title::after,
+  .form__group:nth-child(4) .form__title::after,
+  .form__group:nth-child(5) .form__title::after {
     width: 280px;
+  }
+  
+  .form__group:nth-child(4) .form__title::after {
+    right: -280px;
+  }
+
+  .form__group:nth-child(4) .form__title::before {
+    left: -280px;
   }
 
   .form__group:nth-child(4) .form__title {
@@ -656,4 +683,9 @@
   .form__radio + .form__label::after {
     left: 22px;
   }
+
+  .form__radio:checked + .form__label::after {
+  top: 3px;
+  left: 22px;
+}
 }
