--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -13,7 +13,52 @@
   width: 46px;
   height: 46px;
   background-color: #81b3d2;
+  position: relative;
 }
+
+.social__item:hover,
+.social__item:focus {
+  background-color: #669ec0;
+}
+
+.social__item:active {
+  background-color: #5496bd;
+}
+
+.social__item::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 20px;
+  height: 20px;
+}
+
+.social_item:active::before {
+  opacity: 0.3;
+}
+
+
+.social__item:nth-child(1)::before {
+  background-image: url("../img/icon-twitter.svg");
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+}
+
+.social__item:nth-child(2)::before {
+  background-image: url("../img/icon-facebook.svg");
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+}
+
+.social__item:nth-child(3)::before {
+  background-image: url("../img/icon-youtube.svg");
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+}
+
+
 
 @media (min-width: 768px) {
   .social {
