--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -59,7 +59,7 @@
   color: #ffffff;
   text-align: center;
   padding-top: 15px;
-  padding-bottom: 40px;
+  padding-bottom: 39px;
 }
 
 .advantages__item .advantages__wrapper--detail {
@@ -74,11 +74,11 @@
 .advantages__wrapper--detail .advantages__title {
   color: #000000;
   text-align: left;
-  padding-top: 33px;
+  padding-top: 28px;
 }
 
-.advantages__wrapper--detail .advantages__title:first-child {
-  padding-top: 28px;
+.advantages__detail:first-child .advantages__title {
+  padding-top: 34px;
 }
 
 .advantages__wrapper--detail .advantages__description {
@@ -98,7 +98,7 @@
   font-weight: 700;
   color: #000000;
   margin: 0;
-  padding-top: 20px;
+  padding-top: 19px;
   text-align: center;
 }
 
@@ -121,6 +121,14 @@
   padding-top: 15px;
   padding-bottom: 36px;
   text-align: center;
+}
+
+.advantages__item:nth-child(3) .advantages__title {
+  padding-top: 26px;
+}
+
+.advantages__item:nth-child(3) .advantages__number {
+  padding-top: 10px;
 }
 
 .advantages__item:nth-child(5) .advantages__description {
@@ -150,8 +158,8 @@
 .advantages__detail--lodging::before {
   content: "";
   position: absolute;
-  left: -52px;
-  top: 20px;
+  left: -50px;
+  top: 27px;
   width: 40px;
   height: 40px;
   background-image: url("../img/icon-house.svg");
@@ -162,7 +170,7 @@
 .advantages__detail--souvenirs::before {
   content: "";
   position: absolute;
-  left: -52px;
+  left: -50px;
   top: 20px;
   width: 40px;
   height: 40px;
@@ -174,9 +182,9 @@
 .advantages__detail--food::before {
   content: "";
   position: absolute;
-  left: -52px;
-  top: 20px;
-  width: 40px;
+  left: -50px;
+  top: 22px;
+  width: 36px;
   height: 40px;
   background-image: url("../img/icon-burger.svg");
   background-repeat: no-repeat;
@@ -207,6 +215,10 @@
   width: 280px;
   height: 1px;
   background-color: rgba(0, 0, 0, 0.1);
+}
+
+.advantages__item:nth-child(2) .advantages__title {
+  padding-top: 39px;
 }
 
 .advantages__container {
@@ -279,13 +291,14 @@
     order: 2;
   }
 
-  .advantages__photo {
-    width: 67%;
-    height: 256px;
-  }
-
   .advantages__item:nth-child(2) .advantages__wrapper {
     order: 3;
+  }
+  
+  .advantages__item:nth-child(2) .advantages__title {
+    padding-top: 44px;
+    width: 151px;
+    margin: 0 auto;
   }
 
   .advantages__wrapper ul {
@@ -304,6 +317,10 @@
   .advantages__detail:nth-child(3) {
     padding: 0 50px;
     padding-top: 130px;
+  }
+
+  .advantages__item:nth-child(3) .advantages__title {
+    padding-top: 45px;
   }
 
   .advantages__wrapper--detail .advantages__detail--food {
@@ -365,6 +382,14 @@
     padding-top: 45px;
   }
 
+  .advantages__detail:first-child .advantages__title {
+    padding-top: 28px;
+  }
+
+  .advantages__wrapper--detail .advantages__title {
+    padding-top: 28px;
+  }
+
   .advantages__detail--lodging::before {
     content: "";
     position: absolute;
@@ -373,7 +398,7 @@
     top: 60px;
     width: 74px;
     height: 74px;
-    background-image: url("../img/icon-house.svg");
+    background-image: url("../img/icon-house-tab.svg");
     background-position: 0 0;
     background-repeat: no-repeat;
   }
@@ -381,12 +406,12 @@
   .advantages__detail--souvenirs::before {
     content: "";
     position: absolute;
-    left: 50%;
+    left: 54%;
     transform: translateX(-50%);
     top: 56px;
     width: 74px;
-    height: 74px;
-    background-image: url("../img/icon-gift.svg");
+    height: 77px;
+    background-image: url("../img/icon-gift-tab.svg");
     background-position: 0 0;
     background-repeat: no-repeat;
   }
@@ -394,11 +419,12 @@
   .advantages__detail--food::before {
     content: "";
     position: absolute;
-    left: 50%;
+    left: 51%;
     transform: translateX(-50%);
     top: 60px;
-    width: 74px;
-    height: 74px;
+    width: 80px;
+    height: 70px;
+    background-image: url("../img/icon-burger-tab.svg");
     background-position: 0 0;
     background-repeat: no-repeat;
   }
@@ -415,4 +441,66 @@
     width: 160px;
     margin: 0 auto;
   }
+
+  .advantages__wrapper--detail .advantages__title {
+    padding-top: 28px;
+  }
+
+  .advantages__wrapper {
+    width: 400px;
+  }
+
+  .advantages__container {
+    width: 800px;
+  }
+
+  .advantages__wrapper .advantages__description {
+    width: 300px;
+    margin: 0 auto;
+  }
+
+  .advantages__item:nth-child(1) .advantages__wrapper:first-child {
+    padding: 0;
+  }
+  
+  .advantages__wrapper--detail {
+    width: 1200px;
+  }
+  .advantages__wrapper ul {
+    margin: 0;
+  }
+
+  .advantges__detail {
+    width: 400px;
+  }
+
+  .advantages__wrapper--detail .advantages__detail:nth-child(3) {
+    margin-left: 6px;
+  }
+
+  .advantages__wrapper--detail .advantages__detail--souvenirs {
+    margin-left: 10px;
+  }
+
+  .advantages__detail--souvenirs::before {
+    left: 50%;
+  }
+
+  .advantages__item:nth-child(2) .advantages__title {
+    padding-top: 50px;
+  }
+
+  .advantages > .advantages__item:nth-child(3) {
+    width: 400px;
+  }
+
+  .advantages > .advantages__item:nth-child(4) {
+    width: 400px;
+  }
+  
+  .advantages > .advantages__item:nth-child(5) {
+    width: 400px;
+  }
+
+
 }
