--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -9,11 +9,11 @@
   font-weight: 700;
   color: #000000;
   text-align: center;
-  margin-top: 30px;
+  margin-top: 37px;
 }
 
-.page-footer__hashtag--margin-form {
-  margin-top: 75px;
+.page-footer__hashtag--form {
+  margin-top: 74px;
 }
 
 @media (min-width: 768px) {
@@ -22,7 +22,7 @@
     margin: 0 auto;
     display: flex;
     justify-content: flex-start;
-    margin-top: 30px;
+    margin-top: 36px;
   }
 
   .page-footer__hashtag {
@@ -32,6 +32,10 @@
   .page-footer__social {
     margin-left: 110px;
   }
+
+  .page-footer__social--photo {
+    margin-left: 112px;
+  }
 }
 
 @media (min-width: 1200px) {
@@ -39,10 +43,18 @@
     width: 1200px;
     padding: 0 120px;
     margin: 0 auto;
-    margin-top: 30px;
+    margin-top: 36px;
   }
 
   .page-footer__social {
     margin-left: 270px;
+  }
+
+  .page-footer__social--form {
+    margin-left: 268px;
+  }
+
+  .page-footer__hashtag--form {
+    margin-top: 8px;
   }
 }
