--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -30,9 +30,9 @@
 .main-nav--open + .page-header__toggle::after {
   content: "";
   position: absolute;
-  top: 10px;
-  right: 0;
-  width: 23px;
+  top: 12px;
+  right: -1px;
+  width: 27px;
   height: 4px;
   background-color: #ffffff;
 }
@@ -74,5 +74,12 @@
 
   .page-header__toggle {
     display: none;
+  }
+}
+
+@media (min-width: 1200px) {
+  .page-header__logo img {
+    width: 194px;
+    height: 98px;
   }
 }
