--- a/source/sass/blocks/photo.scss
+++ b/source/sass/blocks/photo.scss
@@ -7,8 +7,8 @@
 }
 
 .photo__text {
-  padding-top: 10px;
-  padding-bottom: 39px;
+  padding-top: 14px;
+  padding-bottom: 41px;
 }
 
 .photo__title {
@@ -36,6 +36,7 @@
   color: #000000;
   padding-left: 12px;
   padding-top: 8px;
+  width: 38px;
 }
 
 .photo__likes {
@@ -99,6 +100,10 @@
     padding-top: 69px;
   }
 
+  .photo__sum {
+    padding-top: 4px;
+  }
+
   .photo__item:nth-child(1) {
     width: 100%;
   }
@@ -122,7 +127,7 @@
   .photo__likes {
     align-self: center;
     margin-left: auto;
-    margin-right: 20px;
+    margin-right: 26px;
   }
 
   .photo__container {
@@ -132,12 +137,18 @@
   .photo__item::before {
     display: none;
   }
+
+  .photo__button::before {
+    top: 0;
+    left: 2px;
+  }
 }
 
 @media (min-width: 1200px) {
   .photo {
     width: 1200px;
     padding: 0;
+    padding-top: 73px;
   }
 
   .photo__item:nth-child(1) {
@@ -179,5 +190,10 @@
 
   .photo__sum {
     color: #ffffff;
+  }
+
+  .photo__button::before {
+    background-image: url("../img/icon-like-desktop.svg");
+    opacity: 1;
   }
 }
