--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -108,6 +108,7 @@
   .intro__header--form .intro__logo,
   .intro__header--photo .intro__logo {
     width: 455px;
+    height: 75px;
   }
 
   .intro__title {
