--- a/source/sass/blocks/base.scss
+++ b/source/sass/blocks/base.scss
@@ -1,5 +1,6 @@
 @font-face {
   font-family: "PT Sans";
+  font-display: swap;
   src:
     local("PT Sans Regular"),
     url("../fonts/ptsans.woff") format("woff"),
@@ -9,6 +10,7 @@
 
 @font-face {
   font-family: "PT Sans";
+  font-display: swap;
   src:
     local("PT Sans Bold"),
     url("../fonts/ptsansbold.woff") format("woff"),
