--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -245,7 +245,7 @@
   }
 
   .advantages__container {
-    width: 67%;
+    width: 515px;
     height: 256px;
   }
 
@@ -260,7 +260,7 @@
   }
 
   .advantages__wrapper {
-    width: 33%;
+    width: 253px;
     height: 256px;
     padding: 0;
   }
@@ -308,7 +308,7 @@
   }
 
   .advantages__detail {
-    width: 33.3%;
+    width: 255px;
     height: 330px;
     padding: 0 42px;
     padding-top: 130px;
@@ -340,7 +340,7 @@
   }
 
   .advantages > .advantages__item:nth-child(3) {
-    width: 33.3%;
+    width: 255px;
     height: 256;
     padding: 0 46px;
     display: flex;
@@ -348,7 +348,7 @@
   }
 
   .advantages > .advantages__item:nth-child(4) {
-    width: 33.3%;
+    width: 255px;
     height: 256px;
     padding: 0 60px;
     display: flex;
@@ -356,7 +356,7 @@
   }
 
   .advantages > .advantages__item:nth-child(5) {
-    width: 33.3%;
+    width: 255px;
     height: 256px;
     padding: 0 50px;
     display: flex;
@@ -462,6 +462,10 @@
 
   .advantages__wrapper--detail {
     width: 1200px;
+  }
+
+  .advantages__detail {
+    width: 392px;
   }
 
   .advantages__wrapper ul {
