--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -15,7 +15,7 @@
 
 .modal__title {
   margin: 0;
-  fint-size: 18px;
+  font-size: 18px;
   line-height: 26px;
   font-weight: 700;
   color: #000000;
