--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -57,11 +57,11 @@
   }
 
   .site-list__item {
-    width: 20%;
+    width: 153px;
   }
 
   .site-list__item:nth-child(2) {
-    margin-right: 20%;
+    margin-right: 153px;
   }
 
   .site-list__item .site-list__link {
@@ -103,5 +103,15 @@
   .site-list__item .site-list__link--active:active {
     color: rgba(118, 99, 87, 0.3);
     background-color: #ffffff;
+  }
+}
+
+@media (min-width: 1200px) {
+  .site-list__item {
+    width: 240px;
+  }
+
+  .site-list__item:nth-child(2) {
+    margin-right: 240px;
   }
 }
